Fix the internal macOS build after 274695@main https://bugs.webkit.org/show_bug.cgi?id=269604 rdar://123109006

Unreviewed build fix.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:

Canonical link: https://commits.webkit.org/274869@main